@@ -76,7 +76,6 @@ Version 6.2:
     - bug #40870: config nitpick: ATtiny25/45/85 have 1 calibration byte not 2
     - bug #42908: no external reset at JTAGICE3
     - patch #8437: [PATCH] Serial-over-ethernet for Win32
-    - patch #8380: adds 500k 1M 2M baud to ser_posix.c
     - bug #44717: avrdude creates empty flash dump
 
   * Internals:
